--- a/app/src/main/res/layout/tambah_anggota.xml
+++ b/app/src/main/res/layout/tambah_anggota.xml
@@ -3,196 +3,181 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content">
+    android:layout_height="match_parent">
 
     <TextView
         android:id="@+id/judul"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="24dp"
+        android:layout_marginStart="36dp"
+        android:layout_marginTop="16dp"
+        android:layout_marginEnd="8dp"
         android:fontFamily="monospace"
         android:text="Isikan Data Sekarang"
         android:textColor="@android:color/black"
         android:textSize="24sp"
         android:textStyle="bold"
-        app:layout_constraintBottom_toTopOf="@+id/tambah_nama"
-        app:layout_constraintEnd_toEndOf="@+id/edit_nama"
-        app:layout_constraintStart_toStartOf="@+id/tambah_nama" />
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
         android:id="@+id/tambah_nama"
         android:layout_width="100dp"
         android:layout_height="wrap_content"
-        android:layout_marginStart="32dp"
+        android:layout_marginStart="36dp"
+        android:layout_marginTop="20dp"
         android:text="Nama"
         app:layout_constraintStart_toStartOf="parent"
-        tools:ignore="MissingConstraints"
-        tools:layout_editor_absoluteY="69dp" />
+        app:layout_constraintTop_toBottomOf="@+id/judul"
+        tools:ignore="MissingConstraints" />
 
     <TextView
         android:id="@+id/tambah_nim"
         android:layout_width="100dp"
         android:layout_height="wrap_content"
-        android:layout_marginStart="32dp"
+        android:layout_marginTop="24dp"
         android:text="NIM"
-        app:layout_constraintStart_toStartOf="parent"
-        tools:ignore="MissingConstraints"
-        tools:layout_editor_absoluteY="123dp" />
+        app:layout_constraintStart_toStartOf="@+id/tambah_nama"
+        app:layout_constraintTop_toBottomOf="@+id/tambah_nama"
+        tools:ignore="MissingConstraints" />
 
     <TextView
         android:id="@+id/tambah_tempat_lahir"
         android:layout_width="100dp"
         android:layout_height="wrap_content"
-        android:layout_marginStart="32dp"
+        android:layout_marginTop="28dp"
         android:text="Tempat Lahir"
-        app:layout_constraintStart_toStartOf="parent"
-        tools:ignore="MissingConstraints"
-        tools:layout_editor_absoluteY="177dp" />
+        app:layout_constraintStart_toStartOf="@+id/tambah_nim"
+        app:layout_constraintTop_toBottomOf="@+id/tambah_nim"
+        tools:ignore="MissingConstraints" />
 
     <TextView
         android:id="@+id/tambah_tgl_lahir"
         android:layout_width="100dp"
         android:layout_height="wrap_content"
-        android:layout_marginStart="32dp"
+        android:layout_marginTop="24dp"
         android:text="Tanggal Lahir"
-        app:layout_constraintStart_toStartOf="parent"
-        tools:ignore="MissingConstraints"
-        tools:layout_editor_absoluteY="238dp" />
+        app:layout_constraintStart_toStartOf="@+id/tambah_tempat_lahir"
+        app:layout_constraintTop_toBottomOf="@+id/tambah_tempat_lahir"
+        tools:ignore="MissingConstraints" />
 
     <TextView
         android:id="@+id/tambah_alamat"
         android:layout_width="100dp"
         android:layout_height="wrap_content"
-        android:layout_marginStart="32dp"
+        android:layout_marginTop="28dp"
         android:text="Alamat"
-        app:layout_constraintStart_toStartOf="parent"
-        tools:ignore="MissingConstraints"
-        tools:layout_editor_absoluteY="293dp" />
+        app:layout_constraintStart_toStartOf="@+id/tambah_tgl_lahir"
+        app:layout_constraintTop_toBottomOf="@+id/tambah_tgl_lahir"
+        tools:ignore="MissingConstraints" />
 
     <TextView
         android:id="@+id/tambah_motivasi"
         android:layout_width="100dp"
         android:layout_height="wrap_content"
-        android:layout_marginStart="32dp"
+        android:layout_marginTop="28dp"
         android:text="Motivasi"
-        app:layout_constraintStart_toStartOf="parent"
-        tools:ignore="MissingConstraints"
-        tools:layout_editor_absoluteY="357dp" />
+        app:layout_constraintStart_toStartOf="@+id/tambah_alamat"
+        app:layout_constraintTop_toBottomOf="@+id/tambah_alamat"
+        tools:ignore="MissingConstraints" />
 
     <TextView
         android:id="@+id/tambah_foto"
         android:layout_width="100dp"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="24dp"
-        android:layout_marginStart="32dp"
-        android:layout_marginTop="32dp"
+        android:layout_marginTop="28dp"
         android:text="Upload Foto"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintStart_toStartOf="@+id/tambah_motivasi"
         app:layout_constraintTop_toBottomOf="@+id/tambah_motivasi"
-        app:layout_constraintVertical_bias="0.0"
         tools:ignore="MissingConstraints" />
 
     <EditText
         android:id="@+id/edit_alamat"
-        android:layout_width="0dp"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="32dp"
+        android:layout_marginTop="8dp"
         android:ems="10"
         android:inputType="text|textPersonName"
         android:textSize="12sp"
-        app:layout_constraintBottom_toBottomOf="@+id/tambah_alamat"
-        app:layout_constraintStart_toEndOf="@+id/tambah_alamat"
-        app:layout_constraintTop_toTopOf="@+id/tambah_alamat"
-        app:layout_constraintVertical_bias="0.0" />
+        app:layout_constraintStart_toStartOf="@+id/edit_tanggal_lahir"
+        app:layout_constraintTop_toBottomOf="@+id/edit_tanggal_lahir" />
 
     <EditText
         android:id="@+id/edit_motivasi"
-        android:layout_width="0dp"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="32dp"
+        android:layout_marginTop="8dp"
         android:ems="10"
         android:inputType="text|textPersonName"
         android:textSize="12sp"
-        app:layout_constraintBottom_toBottomOf="@+id/tambah_motivasi"
-        app:layout_constraintStart_toEndOf="@+id/tambah_motivasi"
-        app:layout_constraintTop_toTopOf="@+id/tambah_motivasi" />
+        app:layout_constraintStart_toStartOf="@+id/edit_alamat"
+        app:layout_constraintTop_toBottomOf="@+id/edit_alamat" />
 
     <EditText
         android:id="@+id/edit_tanggal_lahir"
-        android:layout_width="0dp"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="32dp"
+        android:layout_marginTop="8dp"
         android:ems="10"
         android:inputType="text|textPersonName"
         android:textSize="12sp"
-        app:layout_constraintBottom_toBottomOf="@+id/tambah_tgl_lahir"
-        app:layout_constraintStart_toEndOf="@+id/tambah_tgl_lahir"
-        app:layout_constraintTop_toTopOf="@+id/tambah_tgl_lahir"
-        app:layout_constraintVertical_bias="0.055" />
+        app:layout_constraintStart_toStartOf="@+id/edit_tempat_lahir"
+        app:layout_constraintTop_toBottomOf="@+id/edit_tempat_lahir" />
 
     <EditText
         android:id="@+id/edit_tempat_lahir"
-        android:layout_width="0dp"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="32dp"
+        android:layout_marginTop="8dp"
         android:ems="10"
         android:inputType="text|textPersonName"
         android:textSize="12sp"
-        app:layout_constraintBottom_toBottomOf="@+id/tambah_tempat_lahir"
-        app:layout_constraintStart_toEndOf="@+id/tambah_tempat_lahir"
-        app:layout_constraintTop_toTopOf="@+id/tambah_tempat_lahir"
-        app:layout_constraintVertical_bias="0.444" />
+        app:layout_constraintStart_toStartOf="@+id/edit_nim"
+        app:layout_constraintTop_toBottomOf="@+id/edit_nim" />
 
     <EditText
         android:id="@+id/edit_nim"
-        android:layout_width="0dp"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="32dp"
+        android:layout_marginTop="8dp"
         android:ems="10"
         android:inputType="text|textPersonName"
         android:textSize="12sp"
-        app:layout_constraintBottom_toBottomOf="@+id/tambah_nim"
-        app:layout_constraintStart_toEndOf="@+id/tambah_nim"
-        app:layout_constraintTop_toTopOf="@+id/tambah_nim"
-        app:layout_constraintVertical_bias="0.0" />
+        app:layout_constraintStart_toStartOf="@+id/edit_nama"
+        app:layout_constraintTop_toBottomOf="@+id/edit_nama" />
 
     <EditText
         android:id="@+id/edit_nama"
-        android:layout_width="0dp"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="32dp"
         android:ems="10"
         android:inputType="text|textPersonName"
         android:textSize="12sp"
-        app:layout_constraintBottom_toBottomOf="@+id/tambah_nama"
         app:layout_constraintStart_toEndOf="@+id/tambah_nama"
-        app:layout_constraintTop_toTopOf="@+id/tambah_nama"
-        app:layout_constraintVertical_bias="0.0" />
+        app:layout_constraintTop_toTopOf="@+id/tambah_nama" />
 
     <ImageButton
         android:id="@+id/button_foto"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="32dp"
         android:layout_marginTop="8dp"
-        app:layout_constraintBottom_toBottomOf="@+id/tambah_foto"
-        app:layout_constraintStart_toEndOf="@+id/tambah_foto"
-        app:layout_constraintTop_toTopOf="@+id/tambah_foto"
+        app:layout_constraintStart_toStartOf="@+id/edit_motivasi"
+        app:layout_constraintTop_toBottomOf="@+id/edit_motivasi"
         app:srcCompat="@android:drawable/ic_menu_camera" />
 
     <Button
         android:id="@+id/simpan"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="8dp"
-        android:layout_marginEnd="8dp"
         android:layout_marginStart="8dp"
         android:layout_marginTop="8dp"
+        android:layout_marginEnd="8dp"
         android:text="Save Data"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="@+id/judul"
-        app:layout_constraintStart_toStartOf="@+id/tambah_foto"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/button_foto" />
 
 </android.support.constraint.ConstraintLayout>
