--- a/app/src/main/res/menu/tambah.xml
+++ b/app/src/main/res/menu/tambah.xml
@@ -4,11 +4,20 @@
 
     <item
         android:id="@+id/menu_refresh"
+        android:title="Refresh" />
+    <item
+        android:id="@+id/menu_tambah"
+        android:title="Tambah Anggota" />
+    <item
+        android:id="@+id/af"
+        android:title="Anggota Favorit" />
+    <item
+        android:id="@+id/menu_refresh1"
         android:icon="@android:drawable/stat_notify_sync"
         android:title="Item"
         app:showAsAction="always" />
     <item
-        android:id="@+id/menu_tambah"
+        android:id="@+id/menu_tambah1"
         android:icon="@android:drawable/ic_menu_add"
         android:title="Tambah"
         app:showAsAction="always" />
