--- a/app/src/main/res/layout/activity_detail.xml
+++ b/app/src/main/res/layout/activity_detail.xml
@@ -144,16 +144,20 @@
         app:layout_constraintStart_toStartOf="@+id/imageView"
         app:layout_constraintTop_toBottomOf="@+id/textView15" />
 
-    <ImageButton
-        android:id="@+id/favouritebtn"
+    <ImageView
+        android:id="@+id/unfavorite"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:background="#00ffffff"
-        android:clickable="true"
-        android:contentDescription="@string/todo"
-        android:focusable="true"
-        tools:ignore="MissingConstraints"
-        tools:layout_editor_absoluteX="284dp"
-        tools:layout_editor_absoluteY="233dp" />
+        android:layout_marginEnd="8dp"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="8dp"
+        app:layout_constraintEnd_toEndOf="@+id/imageView"
+        app:layout_constraintStart_toEndOf="@+id/nim"
+        app:layout_constraintTop_toBottomOf="@+id/imageView"
+        app:srcCompat="@drawable/favorite"
+        android:onClick="addFavoriteToServer"/>
+
+
+
 
 </android.support.constraint.ConstraintLayout>
