--- a/app/src/main/res/layout/tambah_anggota.xml
+++ b/app/src/main/res/layout/tambah_anggota.xml
@@ -163,11 +163,12 @@
         android:id="@+id/simpan"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginEnd="8dp"
         android:layout_marginStart="8dp"
         android:layout_marginTop="8dp"
+        android:layout_marginEnd="8dp"
         android:text="Save Data"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.477"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/edit_foto" />
 
@@ -175,7 +176,6 @@
         android:id="@+id/edit_foto"
         android:layout_width="92dp"
         android:layout_height="105dp"
-        android:layout_marginStart="8dp"
         android:layout_marginTop="8dp"
         app:layout_constraintStart_toStartOf="@+id/edit_motivasi"
         app:layout_constraintTop_toBottomOf="@+id/edit_motivasi"
