--- a/app/src/main/res/layout/activity_detail.xml
+++ b/app/src/main/res/layout/activity_detail.xml
@@ -10,15 +10,15 @@
     <ImageView
         android:id="@+id/imageView"
         android:layout_width="240dp"
-        android:layout_height="209dp"
+        android:layout_height="200dp"
         android:layout_marginStart="8dp"
         android:layout_marginTop="16dp"
         android:layout_marginEnd="8dp"
+        android:contentDescription="@string/todo"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:srcCompat="@drawable/avatars_5b03f9d162465"
-        android:contentDescription="@string/todo" />
+        app:srcCompat="@drawable/avatars_5b03f9d162465" />
 
     <TextView
         android:id="@+id/nim"
@@ -146,18 +146,12 @@
 
     <ImageView
         android:id="@+id/unfavorite"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginEnd="8dp"
-        android:layout_marginStart="8dp"
+        android:layout_width="30dp"
+        android:layout_height="30dp"
+        android:layout_marginStart="20dp"
         android:layout_marginTop="8dp"
-        app:layout_constraintEnd_toEndOf="@+id/imageView"
         app:layout_constraintStart_toEndOf="@+id/nim"
         app:layout_constraintTop_toBottomOf="@+id/imageView"
-        app:srcCompat="@drawable/favorite"
-        android:onClick="addFavoriteToServer"/>
-
-
-
+        app:srcCompat="@drawable/favorite" />
 
 </android.support.constraint.ConstraintLayout>
