--- a/app/src/main/res/layout/activity_detail_landscape.xml
+++ b/app/src/main/res/layout/activity_detail_landscape.xml
@@ -1,31 +1,26 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    tools:context="com.example.klmpk7.rekrut_or.DetailActivity">
+    android:layout_height="match_parent">
 
     <ImageView
         android:id="@+id/imageView"
-        android:layout_width="240dp"
-        android:layout_height="209dp"
-        android:layout_marginStart="8dp"
-        android:layout_marginTop="16dp"
-        android:layout_marginEnd="8dp"
-        app:layout_constraintEnd_toEndOf="parent"
+        android:layout_width="272dp"
+        android:layout_height="178dp"
+        android:layout_marginStart="24dp"
+        android:layout_marginTop="24dp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:srcCompat="@drawable/avatars_5b03f9d162465"
-        android:contentDescription="@string/todo" />
+        app:srcCompat="@drawable/avatars_5b03f9d162465" />
 
     <TextView
         android:id="@+id/nim"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="64dp"
-        android:text="@string/textview10"
+        android:layout_height="18dp"
+        android:layout_marginStart="88dp"
+        android:text="TextView"
         app:layout_constraintStart_toEndOf="@+id/textView10"
         app:layout_constraintTop_toTopOf="@+id/textView10" />
 
@@ -34,7 +29,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="16dp"
-        android:text="@string/textview11"
+        android:text="TextView"
         app:layout_constraintStart_toStartOf="@+id/nim"
         app:layout_constraintTop_toBottomOf="@+id/nim" />
 
@@ -43,7 +38,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="16dp"
-        android:text="@string/textview12"
+        android:text="TextView"
         app:layout_constraintStart_toStartOf="@+id/nama"
         app:layout_constraintTop_toBottomOf="@+id/nama" />
 
@@ -52,7 +47,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="16dp"
-        android:text="@string/textview13"
+        android:text="TextView"
         app:layout_constraintStart_toStartOf="@+id/tmpt_lahir"
         app:layout_constraintTop_toBottomOf="@+id/tmpt_lahir" />
 
@@ -61,7 +56,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="16dp"
-        android:text="@string/textview14"
+        android:text="TextView"
         app:layout_constraintStart_toStartOf="@+id/tgl_lahir"
         app:layout_constraintTop_toBottomOf="@+id/tgl_lahir" />
 
@@ -70,7 +65,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="16dp"
-        android:text="@string/textview15"
+        android:text="TextView"
         app:layout_constraintStart_toStartOf="@+id/alamat"
         app:layout_constraintTop_toBottomOf="@+id/alamat" />
 
@@ -78,11 +73,11 @@
         android:id="@+id/textView10"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="16dp"
-        android:layout_marginTop="20dp"
+        android:layout_marginStart="36dp"
+        android:layout_marginTop="8dp"
         android:text="@string/nim"
-        app:layout_constraintStart_toStartOf="@+id/imageView"
-        app:layout_constraintTop_toBottomOf="@+id/imageView" />
+        app:layout_constraintStart_toEndOf="@+id/imageView"
+        app:layout_constraintTop_toTopOf="@+id/imageView" />
 
     <TextView
         android:id="@+id/textView11"
@@ -133,27 +128,19 @@
         android:id="@+id/share"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="8dp"
-        android:layout_marginEnd="8dp"
-        android:layout_marginStart="8dp"
-        android:layout_marginTop="8dp"
-        android:onClick="shareText"
-        android:text="@string/share"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="@+id/imageView"
-        app:layout_constraintStart_toStartOf="@+id/imageView"
+        android:layout_marginTop="16dp"
+        android:text="Share"
+        app:layout_constraintStart_toStartOf="@+id/textView15"
         app:layout_constraintTop_toBottomOf="@+id/textView15" />
 
-    <ImageButton
-        android:id="@+id/favouritebtn"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:background="#00ffffff"
-        android:clickable="true"
-        android:contentDescription="@string/todo"
-        android:focusable="true"
-        tools:ignore="MissingConstraints"
-        tools:layout_editor_absoluteX="284dp"
-        tools:layout_editor_absoluteY="233dp" />
+    <ImageView
+        android:id="@+id/unfavorite"
+        android:layout_width="30dp"
+        android:layout_height="30dp"
+        android:layout_marginStart="24dp"
+        android:layout_marginTop="24dp"
+        app:layout_constraintStart_toEndOf="@+id/share"
+        app:layout_constraintTop_toBottomOf="@+id/motivasi"
+        app:srcCompat="@drawable/favorite" />
 
 </android.support.constraint.ConstraintLayout>
