--- a/app/src/main/res/menu/tambah.xml
+++ b/app/src/main/res/menu/tambah.xml
@@ -4,13 +4,13 @@
 
     <item
         android:id="@+id/menu_refresh"
-        android:icon="@android:drawable/ic_popup_sync"
-        android:title="Refresh"
+        android:icon="@android:drawable/stat_notify_sync"
+        android:title="Item"
         app:showAsAction="always" />
     <item
         android:id="@+id/menu_tambah"
         android:icon="@android:drawable/ic_menu_add"
-        android:title="Tambah Anggota"
+        android:title="Tambah"
         app:showAsAction="always" />
     <item
         android:id="@+id/af"
